--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -3,7 +3,9 @@
 	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-	<meta name="description" content="Buddhi Bal Thapa" />
+	<meta name="description" content="This is the personal blog of Buddhi Bal Thapa. I write stuff about programming 
+	and technologies while in the process of learning something new and about the stuff I've learnt. I also write stuff 
+	that are not related to programming." />
 	<title layout:title-pattern="$CONTENT_TITLE :: $DECORATOR_TITLE">Buddhi Bal Thapa</title>
 	<link rel="stylesheet" th:href="@{https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css}"
 		integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
