--- a/src/main/resources/templates/resume/addResume.html
+++ b/src/main/resources/templates/resume/addResume.html
@@ -200,7 +200,7 @@
 						<div class="form-group">
 							<label class="control-label col-sm-2" for="pwd">Languages/Tools:</label>
 							<div class="col-sm-10">
-								<textarea cols="30" rows="10" class="form-control" placeholder="language and tools" ></textarea>
+								<textarea cols="30" rows="10" class="form-control" th:field="*{languageTools}" placeholder="language and tools" ></textarea>
 							</div>
 						</div>
 						<div class="form-group">
