--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -17,20 +17,20 @@
 							
 							<div th:if="${goodMorning}">
 								<img th:src="@{/image/morning.jpg}" class="img-responsive" alt="Greetings from Buddhi Bal Thapa" />
-								<div class="carousel-caption greeting-text">Good morning have a great day</div>
+								<div class="carousel-caption greeting-text">Good morning! Have a great day.</div>
 							</div>
 
 							<div th:if="${goodAfternoon}">
 								<img th:src="@{/image/afternoon.jpg}" class="img-responsive" alt="Greetings from Buddhi Bal Thapa" />
-								<div class="carousel-caption greeting-text">Good afternoon. How is your day today? Time for coffee?</div>
+								<div class="carousel-caption greeting-text">Good afternoon! How is your day today? Time for coffee?</div>
 							</div>
 							<div th:if="${goodEvening}">
 								<img th:src="@{/image/evening.jpg}" class="img-responsive" alt="Greetings from Buddhi Bal Thapa" />
-								<div class="carousel-caption greeting-text">Good evening time for some snacks</div>
+								<div class="carousel-caption greeting-text">Good evening! Time for some snacks?</div>
 							</div>
 							<div th:if="${goodNight}">
 								<img th:src="@{/image/night.jpg}" class="img-responsive" alt="Greetings from Buddhi Bal Thapa" />
-								<div class="carousel-caption greeting-text">Hope you had a great day today. Good night time to sleep</div>
+								<div class="carousel-caption greeting-text">Hope you had a great day today. Good night, time to sleep</div>
 							</div>
 							<div th:if="${midNight}">
 								<img th:src="@{/image/midnight.jpg}" class="img-responsive" alt="Greetings from Buddhi Bal Thapa" />
