--- a/src/main/resources/templates/dashboard/leftNavbar.html
+++ b/src/main/resources/templates/dashboard/leftNavbar.html
@@ -1,13 +1,13 @@
 <div th:fragment="navbar">
 	<ul class="nav" id="main-menu">
 		<li><a th:href="@{/dashboard}"><i class="fa fa-desktop"></i>Dashboard</a></li>
-		<li><a href="blank.html"><i class="fa fa-edit "></i>Admin
-				<span class="badge">Included</span></a></li>
-		<li><a href="#"><i class="fa fa-qrcode "></i>Settings</a></li>
-		<li><a th:href="@{/resume/new}"><i class="fa fa-bar-chart-o"></i>Resume</a></li>
+		<li sec:authorize="hasAuthority('ADMIN')"><a th:href="@{/admin}"><i class="fa fa-key "></i>Admin<span class="badge">Included</span></a></li>
+		<li sec:authorize="hasAuthority('ADMIN')"><a th:href="@{/resume}"><i class="fa fa-bar-chart-o"></i>Resume</a></li>
+		<li sec:authorize="hasAuthority('ADMIN')"><a th:href="@{/category/all}"><i class="fa fa-table "></i>Category</a></li>
+		<li sec:authorize="hasAuthority('ADMIN')"><a th:href="@{/contact/all}"><i class="fa fa fa-comments"></i>Contact Message</a></li>
 	
-		<li><a href="#"><i class="fa fa-edit "></i>My Link Three </a></li>
-		<li><a href="#"><i class="fa fa-table "></i>My Link Four</a></li>
-		<li><a href="#"><i class="fa fa-edit "></i>My Link Five </a></li>
+		<li><a th:href="@{/project}"><i class="fa fa-edit "></i>Project</a></li>
+		<li><a th:href="@{/blog/all}"><i class="fa fa-book "></i>Blog</a></li>
+		<li><a th:href="@{/settings/user}"><i class="fa fa-gear"></i>Settings</a></li>
 	</ul>
 </div>
