--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -176,7 +176,11 @@
 		  templates: [
 		    { title: 'Test template 1', content: 'Test 1' },
 		    { title: 'Test template 2', content: 'Test 2' }
-		  ]
+		  ],
+		  image_dimensions: false,
+	         image_class_list: [
+	            {title: 'Responsive', value: 'img-responsive'}
+	        ]
 		 });
 	
 	
