--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -6,6 +6,7 @@
 	<meta name="description" content="This is the personal blog of Buddhi Bal Thapa. I write stuff about programming 
 	and technologies while in the process of learning something new and about the stuff I've learnt. I also write stuff 
 	that are not related to programming." />
+	<meta name="msvalidate.01" content="434FCA1947534BA3EB04E8CA14CCAD84" />
 	<title layout:title-pattern="$CONTENT_TITLE :: $DECORATOR_TITLE">Buddhi Bal Thapa</title>
 	<link rel="stylesheet" th:href="@{https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css}"
 		integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
@@ -16,7 +17,7 @@
 	<link rel="stylesheet" th:href="@{https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/6.6.4/sweetalert2.min.css}" />
 	<link rel="stylesheet" th:href="@{http://fonts.googleapis.com/css?family=Open+Sans}" type="text/css" />
 	<!-- Global Site Tag (gtag.js) - Google Analytics -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-40696634-2"></script>
+	<script async="async" src="https://www.googletagmanager.com/gtag/js?id=UA-40696634-2"></script>
 	<script>
 	  window.dataLayer = window.dataLayer || [];
 	  function gtag(){dataLayer.push(arguments)};
