--- a/src/main/resources/static/css/site.css
+++ b/src/main/resources/static/css/site.css
@@ -6,7 +6,8 @@ html, body {
 	height: 100%;
 	margin: 0;
 	font-size: 14px;
-/* 	line-height: 24px; */
+	min-height: 100%;
+	/* 	line-height: 24px; */
 }
 
 /* keep footer at buttom */
@@ -47,19 +48,26 @@ a {
 
 .navbar-inverse {
 	background-color: #214761;
-	border-color: #F0F0F0;
-	min-height: 70px;
+	border-color: #214761;
+	min-height: 50px;
 }
 
 .nav>li>a>i {
 	margin-right: 10px;
 }
 
+.navbar-row {
+	background-color: #214761;
+}
 /* navbar ends */
+.gsc-search-box {
+	margin: -0.1em 1em 1em 1em !important;
+}
+
 #main-content-box {
 	background-color: #e7e7e7;
 	color: black;
-	padding: 2px;
+	padding: 2px; //
 	margin-top: -22px;
 	width: 100%;
 }
@@ -215,10 +223,41 @@ a {
 	background-color: rgba(30, 83, 31, 0.5);
 }
 
-@media screen and (max-device-width : 360px) {
-	.greeting-text {
-		font-size: 1.5em !important;
+@media screen and (min-width:1500px) {
+	.container {
+		min-width: auto;
 	}
 }
 
-/* langing page stops */
+@media screen and (min-width:1200px) {
+	.container {
+		min-width: 1352px;
+	}
+}
+
+}
+@media screen and (max-width : 480px) {
+	.greeting-text {
+		font-size: 1.3em !important;
+	}
+	.current-time-row {
+		color: #080808;
+		width: 100%;
+	}
+}
+
+.current-time-row {
+		margin: 2px;
+		font-weight: bold;
+	text-align: center;
+}
+
+/* langing page ends */
+
+/* search bar starts */
+.gsc-search-box {
+	height: 35px;
+	margin-top: 5px;
+}
+
+/* search bar ends */
