--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -4,7 +4,7 @@
 	xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
 <meta name="viewport"
-	content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+	content="width=device-width, initial-scale=1.0" />
 <meta name="description"
 	content="This is the personal blog of Buddhi Bal Thapa. I write stuff about programming 
 	and technologies while in the process of learning something new and about the stuff I've learnt. I also write stuff 
@@ -56,137 +56,173 @@
 
 </head>
 <body>
-	<div class="content">
-		<div sec:authorize="isAuthenticated()" class="navbar navbar-inverse">
-			<div class="container-fluid">
-				<div class="navbar-header">
-					<button type="button" class="navbar-toggle" data-toggle="collapse"
-						data-target=".sidebar-collapse">
-						<span class="icon-bar"></span><span class="icon-bar"></span><span
-							class="icon-bar"></span>
-					</button>
-					<a class="navbar-brand" th:href="@{/}"><i
-						class="fa fa-home fa-2x" aria-hidden="true"></i></a>
-				</div>
+	<div class="container">
+		<div class="content">
+			<div class="row navbar-row">
 
-				<div class="sidebar-collapse navbar-collapse collapse">
-					<ul class="nav navbar-nav navbar-right">
-						<li><a th:href="@{/dashboard}"><i
-								class="fa fa-tachometer" aria-hidden="true"></i>&nbsp;Dashboard</a></li>
-					</ul>
-				</div>
+				<div class="col-sm-8">
 
-			</div>
-		</div>
+					<div sec:authorize="isAuthenticated()"
+						class="navbar navbar-inverse">
+						<div class="container-fluid">
+							<div class="navbar-header">
+								<button type="button" class="navbar-toggle"
+									data-toggle="collapse" data-target=".sidebar-collapse">
+									<span class="icon-bar"></span><span class="icon-bar"></span><span
+										class="icon-bar"></span>
+								</button>
+								<a class="navbar-brand" th:href="@{/}"><i
+									class="fa fa-home fa-2x" aria-hidden="true"></i></a>
+							</div>
 
-		<header sec:authorize="isAnonymous()">
-			<nav class="navbar navbar-inverse">
-				<div class="container-fluid">
-					<div class="navbar-header">
-						<button type="button" class="navbar-toggle collapsed"
-							data-toggle="collapse" data-target="#navbar"
-							aria-expanded="false" aria-controls="navbar">
-							<span class="sr-only">Toggle navigation</span> <span
-								class="icon-bar"></span> <span class="icon-bar"></span> <span
-								class="icon-bar"></span>
-						</button>
-						<a class="navbar-brand home-logo" th:href="@{/}"><i
-							class="fa fa-home fa-2x" aria-hidden="true"></i></a>
-					</div>
-					<div id="navbar" class="navbar-collapse collapse">
-						<ul class="nav navbar-nav">
-							<li><a th:href="@{/resume}">Resume</a></li>
-							<!-- 	<li><a th:href="@{/project}">Project</a></li> -->
-
-							<li class="dropdown"><a class="dropdown-toggle"
-								th:href="@{/blog/all}" data-toggle="dropdown" role="button"
-								aria-haspopup="true" aria-expanded="false"> Blog<span
-									class="caret"></span>
-							</a>
-								<ul class="dropdown-menu">
-									<li><a sec:authorize="hasAuthority('ADMIN')"
-										th:href="@{/blog/new}" th:text="#{blog.new}"></a></li>
-									<li><a th:href="@{/blog/all}" th:text="#{blog.all}">CSS</a></li>
-								</ul></li>
-
-							<li><a th:href="@{/contact}">Contact</a></li>
-
-							<li class="dropdown" sec:authorize="hasAuthority('ADMIN')">
-								<a class="dropdown-toggle" th:href="@{#}" data-toggle="dropdown"
-								role="button" aria-haspopup="true" aria-expanded="false">
-									Category<span class="caret"></span>
-							</a>
-								<ul class="dropdown-menu">
-									<li><a th:href="@{/category/new}"
-										th:text="#{category.new}"></a></li>
-									<li><a th:href="@{/category/all}"
-										th:text="#{category.all}">CSS</a></li>
-								</ul>
-							</li>
-
-						</ul>
-						<div
-							th:with="currentUser=${#httpServletRequest.userPrincipal?.name}">
-							<div th:if="${currentUser!=null}">
+							<div class="sidebar-collapse navbar-collapse collapse">
 								<ul class="nav navbar-nav navbar-right">
 									<li><a th:href="@{/dashboard}"><i
 											class="fa fa-tachometer" aria-hidden="true"></i>&nbsp;Dashboard</a></li>
-									<li><a th:href="@{/user}"><i class="fa fa-user"
-											aria-hidden="true"></i>&nbsp; <span th:text="${currentUser}"></span></a></li>
-									<!-- <li><a th:href="@{/login}"><i class="fa fa-sign-in" aria-hidden="true"></i>&nbsp;Login</a></li> -->
-									<li><a th:href="@{/logout}"><i class="fa fa-sign-out"
-											aria-hidden="true"></i>&nbsp;Logout</a></li>
 								</ul>
+							</div>
+
+						</div>
+					</div>
+
+					<div sec:authorize="isAnonymous()">
+						<nav class="navbar navbar-inverse">
+							<div class="container-fluid">
+								<div class="navbar-header">
+									<button type="button" class="navbar-toggle collapsed"
+										data-toggle="collapse" data-target="#navbar"
+										aria-expanded="false" aria-controls="navbar">
+										<span class="sr-only">Toggle navigation</span> <span
+											class="icon-bar"></span> <span class="icon-bar"></span> <span
+											class="icon-bar"></span>
+									</button>
+									<a class="navbar-brand home-logo" th:href="@{/}"><i
+										class="fa fa-home fa-2x" aria-hidden="true"></i></a>
+								</div>
+								<div id="navbar" class="navbar-collapse collapse">
+									<ul class="nav navbar-nav">
+										<li><a th:href="@{/about}">About</a></li>
+										<!-- 	<li><a th:href="@{/project}">Project</a></li> -->
+
+										<li class="dropdown"><a class="dropdown-toggle"
+											th:href="@{/blog/all}" data-toggle="dropdown" role="button"
+											aria-haspopup="true" aria-expanded="false"> Blog<span
+												class="caret"></span>
+										</a>
+											<ul class="dropdown-menu">
+												<li><a sec:authorize="hasAuthority('ADMIN')"
+													th:href="@{/blog/new}" th:text="#{blog.new}"></a></li>
+												<li><a th:href="@{/blog/all}" th:text="#{blog.all}">CSS</a></li>
+											</ul></li>
+
+										<li><a th:href="@{/contact}">Contact</a></li>
+
+										<li class="dropdown" sec:authorize="hasAuthority('ADMIN')">
+											<a class="dropdown-toggle" th:href="@{#}"
+											data-toggle="dropdown" role="button" aria-haspopup="true"
+											aria-expanded="false"> Category<span class="caret"></span>
+										</a>
+											<ul class="dropdown-menu">
+												<li><a th:href="@{/category/new}"
+													th:text="#{category.new}"></a></li>
+												<li><a th:href="@{/category/all}"
+													th:text="#{category.all}">CSS</a></li>
+											</ul>
+										</li>
+
+									</ul>
+
+									<div
+										th:with="currentUser=${#httpServletRequest.userPrincipal?.name}">
+										<div th:if="${currentUser!=null}">
+											<ul class="nav navbar-nav navbar-right">
+												<li><a th:href="@{/dashboard}"><i
+														class="fa fa-tachometer" aria-hidden="true"></i>&nbsp;Dashboard</a></li>
+												<li><a th:href="@{/user}"><i class="fa fa-user"
+														aria-hidden="true"></i>&nbsp; <span
+														th:text="${currentUser}"></span></a></li>
+												<!-- <li><a th:href="@{/login}"><i class="fa fa-sign-in" aria-hidden="true"></i>&nbsp;Login</a></li> -->
+												<li><a th:href="@{/logout}"><i
+														class="fa fa-sign-out" aria-hidden="true"></i>&nbsp;Logout</a></li>
+											</ul>
+										</div>
+									</div>
+								</div>
+								<!--/.nav-collapse -->
+							</div>
+							<!--/.container-fluid -->
+						</nav>
+
+					</div>
+				</div>
+				<div class="col-sm-4">
+					<script>
+						(function() {
+							var cx = '007721834027680516237:lydg9kt25ng';
+							var gcse = document.createElement('script');
+							gcse.type = 'text/javascript';
+							gcse.async = true;
+							gcse.src = 'https://cse.google.com/cse.js?cx=' + cx;
+							var s = document.getElementsByTagName('script')[0];
+							s.parentNode.insertBefore(gcse, s);
+						})();
+					</script>
+					<gcse:search></gcse:search>
+				</div>
+			</div>
+			<div class="row">
+
+
+
+				<div id="main-content-box">
+					<section layout:fragment="content">
+						<div layout:fragment="share-this"></div>
+						<p>Page content goes here</p>
+						<div layout:fragment="share-this"></div>
+					</section>
+				</div>
+				<div layout:fragment="comment"></div>
+				<div layout:fragment="player"></div>
+			</div>
+			<div class="row">
+
+				<footer class="footer">
+					<div class="container">
+						<div layout:fragment="custom-footer">
+							<div class="row footer-content">
+								<div class="col-sm-4 hidden-xs">
+									<ul>
+										<li><a th:href="@{/about}">About</a></li>
+										<li><a th:href="@{/project}">Project</a></li>
+										<li><a th:href="@{/blog/all}">Blog</a></li>
+									</ul>
+								</div>
+								<div class="col-sm-4">
+									<ul>
+										<li>Buddhi Bal Thapa</li>
+										<li>budthapa@gmail.com</li>
+										<li>+971 50 860 9904</li>
+									</ul>
+								</div>
+								<div class="col-sm-4 hidden-xs">
+									<ul>
+										<li><a th:href="@{https://github.com/budthapa}"
+											target="_blank"><i class="fa fa-github fa-lg" aria-hidden="true"></i></a></li>
+										<li><a
+											th:href="@{https://www.linkedin.com/in/buddhi-bal-thapa-2bb87670}"
+											target="_blank"><i class="fa fa-linkedin fa-lg" aria-hidden="true"></i></a></li>
+										<li><a th:href="@{https://twitter.com/buddhibalthapa}"
+											target="_blank"><i class="fa fa-twitter fa-lg"
+												aria-hidden="true"></i></a></li>
+									</ul>
+								</div>
 							</div>
 						</div>
 					</div>
-					<!--/.nav-collapse -->
-				</div>
-				<!--/.container-fluid -->
-			</nav>
-		</header>
-		<div class="row" id="main-content-box">
-			<section layout:fragment="content">
-				<div layout:fragment="share-this"></div>
-				<p>Page content goes here</p>
-				<div layout:fragment="share-this"></div>
-			</section>
-		</div>
-		<div layout:fragment="comment"></div>
-		<div layout:fragment="player"></div>
-
-
-	</div>
-		<footer class="footer">
-			<div class="container">
-				<div layout:fragment="custom-footer">
-					<div class="row footer-content">
-						<div class="col-sm-4 hidden-xs">
-							<ul>
-								<li><a th:href="@{/resume}">Resume</a></li>
-								<li><a th:href="@{/project}">Project</a></li>
-								<li><a th:href="@{/blog/all}">Blog</a></li>
-							</ul>
-						</div>
-						<div class="col-sm-4">
-							<ul>
-								<li>Buddhi Bal Thapa</li>
-								<li>budthapa@gmail.com</li>
-								<li>+971 50 860 9904</li>
-							</ul>
-						</div>
-						<div class="col-sm-4 hidden-xs">
-							<ul>
-								<li><a th:href="@{https://github.com/budthapa}"
-									target="_blank">github</a></li>
-								<li><a href="">linkedin</a></li>
-								<li><a href="">twitter</a></li>
-							</ul>
-						</div>
-					</div>
-				</div>
+				</footer>
 			</div>
-		</footer>
+		</div>
+	</div>
 	<script th:src="@{https://code.jquery.com/jquery-3.2.1.min.js}"
 		integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
 		crossorigin="anonymous">
